--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,17 @@
 * {
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
 }
 
+.country {
+    margin-bottom: 0.5em;
+}
+
 .phone-number {
-    margin: 0 1em;
+    margin: 2em 1em;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -23,6 +26,7 @@ body {
 
 .phone-number.center {
     align-items: center;
+    height: 40%;
     transform: translateY(0);
     -webkit-transform: translateY(0);
     -moz-transform: translateY(0);
@@ -35,23 +39,38 @@ body {
     -o-transition: transform 400ms ease;
 }
 
-.phone-number > input {
-    border: none;
+.phone-number.center > input {
     text-align: center;
-    letter-spacing: 2px;
-    font-weight: 500;
 }
 
-.phone-number :nth-child(3) {
+.phone-number > input {
+    border: none;
+    letter-spacing: 2px;
+    font-weight: 500;
+    font-size: 1.3em;
+}
+
+input {outline:none;}
+
+.phone-number :nth-child(4) {
     text-decoration: none;
     color: #e00f0f;
     font-weight: 450;
     font-size: 1.1em;
 }
 
-.phone-number :nth-child(4) {
+.phone-number :nth-child(5) {
     font-size: 0.6em;
     color: #2f2f2f;
+}
+
+.hr {
+    margin-top: 1em;
+    width: 100%;
+}
+
+.hr.display-none {
+    display: none;
 }
 
 .country.display-none {
@@ -84,86 +103,19 @@ body {
     -o-transition: 0s 2s;
 }
 
-.buttons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.4em;
-    background: #D0D3DA;
-    padding: 0.4em;
-    height: 30%;
-    padding-bottom: 4em;
-    transform: translateY(100%);
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    -o-transform: translateY(100%);
-}
-
-.buttons.show {
-    transform: translateY(0);
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -o-transform: translateY(0);
-    transition: 300ms 300ms ease;
-    -webkit-transition: 300ms 300ms ease;
-    -moz-transition: 300ms 300ms ease;
-    -ms-transition: 300ms 300ms ease;
-    -o-transition: 300ms 300ms ease;
-}
-
-.buttons button {
-    background-color: #fff;
-    border: none;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    height: 3em;
-}
-
-.buttons .opasity {
-    opacity: 0;
-}
-
 .login {
-	height: 100vh;
+	height: 400px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     overflow: hidden;
+}
+
+.login.inter_number {
+    justify-content: space-between;
 }
 
 .login > h1 {
     font-size: 1em;
     text-align: center;
     height: 20%
-}
-
-.btn {
-    font-weight: 500;
-}
-
-.btn :nth-child(1){
-    font-size: 1.3em;
-}
-
-.btn :nth-child(2) {
-    text-transform: uppercase;
-    font-size: 0.6em;
-    letter-spacing: 2px;
-    font-weight: 600;
-}
-
-.buttons :nth-child(10) {
-    background-color: rgba(255, 255, 255, 0);
-}
-
-.buttons :nth-child(12) {
-    background-color: rgba(255, 255, 255, 0);
 }
